fix: ChartGroup vertical spacing

--- a/webui/react/src/components/kit/LineChart.module.scss
+++ b/webui/react/src/components/kit/LineChart.module.scss
@@ -19,12 +19,13 @@
   padding: 0;
   padding-left: var(--grid-spacing);
   padding-right: var(--grid-spacing);
+  padding-top: var(--grid-spacing);
 }
 .chartgridCellCard {
   background-color: var(--theme-stage);
   border: 1px solid var(--theme-stage-border);
   border-radius: 4px;
-  height: calc(100% - var(--grid-spacing));
+  height: calc(100% - var(--grid-spacing)); // instead of .chartgridCell padding-bottom
   padding: 24px;
 }
 .chartTitle {
